--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
     box-sizing:border-box;  
 }
 body{
-    margin:0;
-    padding:0;
+    height:100vh;
     display:flex;
     align-items:center;
     justify-content: center;
     background-color: aqua;
+    font-family: 'Segoe UI'
 }
 
 .clock{
