--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ body{
     display:flex;
     box-shadow:0 3px 10px rgb(0,0,0,0.5);
     letter-spacing:3px;
+    padding:10px;
+    margin:10px;
 }
 
 .clock span{
