--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     
 }
 #container {
-    background: url(bg1.jpg);
+    background: url(bg.jpeg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     
